syntax = "proto3";

package user_enter;
option go_package = ".;user_enter";

message AddUserEnterReq {
  uint64 Uid = 1;
  string Province = 2;
  string City = 3;
  string District = 4;
  string Address = 5;
  string LinkTel = 6;
  string Charter = 7;
}

message AddUserEnterResp {
  uint64 UserEnterId = 1;
}

service UserEnter {
  rpc AddUserEnter(AddUserEnterReq) returns (AddUserEnterResp);
}